Fix alignment of plain text menu in IE6.

--- a/newweb.css
+++ b/newweb.css
@@ -92,6 +92,10 @@ a:hover {
 }
 
 /* Plain text MENU.  */
+div.menu {
+    text-align: center;
+}
+
 td.menuleftedge {
 }
 
